src/test/deca/context/valid/tests/7_algo.deca
// Description:
//    Programme minimaliste traitant une somme.
//
// Resultats:
//    Valeur: 3
//
// Historique:
//    cree le 01/01/2022

{
        float i = 1.0;
        int n = 10;
        while(i*(i+1) <= n) {
        	i = i+1;
        }
        println("Valeur: ", i);
}
