src/test/deca/context/invalid/22_CastNull.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: cannot cast null type
// 
// Historique:
//    cree le 01/01/2022

{
   float a = 1.0;
   // Doit etre refuse.
   int b = 1 + (Null)(a);
}
